--- a/safety.html
+++ b/safety.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../Assets/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="safety.css">
-    <link rel="stylesheet" href="../1.Home/loader.css">
+    <link rel="stylesheet" href="../loader.css">
 
     <!--Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -41,21 +41,21 @@
     <!--Navigation Bar-->
     <nav class="navbar navbar-expand-sm bg-body-dark navbar-dark fixed-top">
         <div class="container-fluid">
-            <a class="navbar-brand" href="../1.Home/index.html"><img class="logo" src="../Assets/logo.png"></a>
+            <a class="navbar-brand" href="../index.html"><img class="logo" src="../Assets/logo.png"></a>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto d-flex gap-3">
                     <li class="nav-item">
-                        <a class="nav-link" id="home" aria-current="page" href="../1.Home/index.html">Home</a>
+                        <a class="nav-link" id="home" aria-current="page" href="../index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" id="snake-facts-links" href="../1.Home/index.html#snake-facts">Snake
+                        <a class="nav-link" id="snake-facts-links" href="../index.html#snake-facts">Snake
                             Facts</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" id="safety-tips" href="../2.Safety Tips/safety.html">Safety Tips</a>
+                        <a class="nav-link" id="safety-tips" href="../safety.html">Safety Tips</a>
                     </li>
                     <li class="nav-item ">
-                        <a class="nav-link" id="donate" href="../3.Donate/Donate.html">Donate</a>
+                        <a class="nav-link" id="donate" href="../Donate.html">Donate</a>
                     </li>
                 </ul>
             </div>
@@ -268,19 +268,19 @@
                     <div class="col-sm-3">
                         <h3 class="text-center">Quick Links</h3>
                         <ul class="quick-links text-center">
-                            <li><a href="../1.Home/index.html">Home</a></li>
-                            <li><a href="../1.Home/index.html#snake-facts">Snake Facts</a></li>
-                            <li><a href="../2.Safety Tips/safety.html">Safety Tips</a></li>
-                            <li><a href="../3.Donate/Donate.html">Donate</a></li>
+                            <li><a href="../index.html">Home</a></li>
+                            <li><a href="../index.html#snake-facts">Snake Facts</a></li>
+                            <li><a href="../safety.html">Safety Tips</a></li>
+                            <li><a href="../Donate.html">Donate</a></li>
                         </ul>
                     </div>
                     <div class="col-sm-3">
                         <h3 class="text-center">Follow Us</h3>
                         <ul class="social-links text-center">
-                            <li><a href="https://www.facebook.com/"><i class="fa fa-facebook"></i></a></li>
-                            <li><a href="https://x.com/"><i class="fa fa-twitter"></i></a></li>
-                            <li><a href="https://www.linkedin.com/"><i class="fa fa-linkedin"></i></a></li>
-                            <li><a href="https://www.instagram.com/"><i class="fa fa-instagram"></i></a></li>
+                            <li><a href="https://www.facebook.com/" target="_blank"><i class="fa fa-facebook"></i></a></li>
+                            <li><a href="https://x.com/" target="_blank"><i class="fa fa-twitter"></i></a></li>
+                            <li><a href="https://www.linkedin.com/" target="_blank"><i class="fa fa-linkedin"></i></a></li>
+                            <li><a href="https://www.instagram.com/" target="_blank"><i class="fa fa-instagram"></i></a></li>
                         </ul>
                     </div>
                     <div class="col-sm-3">
