--- a/safety.html
+++ b/safety.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="../Assets/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./Assets/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="safety.css">
-    <link rel="stylesheet" href="../loader.css">
+    <link rel="stylesheet" href="./loader.css">
 
     <!--Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -30,7 +30,7 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-    <title>Serpent Whispers</title>
+    <title>Safety Tips | Serpent Whispers</title>
 </head>
 
 
@@ -38,31 +38,31 @@
     <div class="loader-container">
         <div class="loader"></div>
     </div>
-    <!--Navigation Bar-->
+
     <nav class="navbar navbar-expand-sm bg-body-dark navbar-dark fixed-top">
         <div class="container-fluid">
-            <a class="navbar-brand" href="../index.html"><img class="logo" src="../Assets/logo.png"></a>
+            <a class="navbar-brand" href="./index.html"><img class="logo" src="./Assets/logo.png"></a>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto d-flex gap-3">
                     <li class="nav-item">
-                        <a class="nav-link" id="home" aria-current="page" href="../index.html">Home</a>
+                        <a class="nav-link" id="home" aria-current="page" href="./index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" id="snake-facts-links" href="../index.html#snake-facts">Snake
+                        <a class="nav-link" id="snake-facts-links" href="./index.html#snake-facts">Snake
                             Facts</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" id="safety-tips" href="../safety.html">Safety Tips</a>
+                        <a class="nav-link" id="safety-tips" href="./safety.html">Safety Tips</a>
                     </li>
                     <li class="nav-item ">
-                        <a class="nav-link" id="donate" href="../Donate.html">Donate</a>
+                        <a class="nav-link" id="donate" href="./Donate.html">Donate</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
 
-    <!--Dangers-->
+
     <div class="row" id="second-heading" style="padding-top:30px">
         <h1 class="text-start display-2 ms-5">Recognize the Symptoms</h1>
         <p class="heading-paragraph ms-5">While snakes are mesmerizing creatures, they can be hazardous, so staying informed and cautious is essential. Sometimes, a snake may bite, and in such cases, recognizing symptoms quickly is crucial for taking prompt action when every moment counts.
@@ -71,30 +71,27 @@
 
     <div class="gallery-container">
         <div class="gallery fade-in-up">
-            <img src="../Assets/Symptoms/1.jpg" alt="Bleeding">
+            <img src="./Assets/Symptoms/1.jpg" alt="Bleeding">
             <div class="description">Bleeding</div>
         </div>
         <div class="gallery fade-in-up">
-            <img src="../Assets/Symptoms/2.jpg" alt="Breathing Difficulties">
+            <img src="./Assets/Symptoms/2.jpg" alt="Breathing Difficulties">
             <div class="description">Breathing difficulties</div>
         </div>
         <div class="gallery fade-in-up">
-            <img src="../Assets/Symptoms/3.jpg" alt="Sweating">
+            <img src="./Assets/Symptoms/3.jpg" alt="Sweating">
             <div class="description">Sweating</div>
         </div>
         <div class="gallery fade-in-up">
-            <img src="../Assets/Symptoms/4.jpg" alt="Vomiting">
+            <img src="./Assets/Symptoms/4.jpg" alt="Vomiting">
             <div class="description">Vomiting</div>
         </div>
         <div class="gallery fade-in-up">
-            <img src="../Assets/Symptoms/5.jpg" alt="Blurred Vision">
+            <img src="./Assets/Symptoms/5.jpg" alt="Blurred Vision">
             <div class="description">Blurred Vision</div>
         </div>
     </div>
 
-
-
-    <!--What to do if you see a snake-->
     <div class="row" style="padding-top:30px">
         <h1 class="text-start display-2 ms-5 fade-in-up">Swift Action, Safe Outcome</h1>
         <p class="heading-paragraph ms-5">When seconds count, a basic knowledge of first aid can save lives. Stay
@@ -103,14 +100,13 @@
     </div>
 
 
-    <!--Accordian-->
     <ul class="accordion" class="fade-in-up">
         <li class="fade-in-up">
             <input type="radio" name="accordion" id="first">
             <label for="first">Stay Calm</label>
             <div class="content">
                 <div class=image>
-                    <img src="../Assets/First Aid/1.jpg" alt="Stay Calm">
+                    <img src="./Assets/First Aid/1.jpg" alt="Stay Calm">
                 </div> &nbsp; &nbsp;
                 <p>Keeping calm helps slow the spread of venom if bitten. Panic increases heart rate, potentially
                     speeding venom movement.</p>
@@ -122,7 +118,7 @@
             </label>
             <div class="content">
                 <div class=image>
-                    <img src="../Assets/First Aid/2.jpg" alt="Bite Below Heart Level">
+                    <img src="./Assets/First Aid/2.jpg" alt="Bite Below Heart Level">
                 </div> &nbsp; &nbsp;
                 <p>This reduces the speed of venom spreading through the bloodstream. Stay as still as possible.</p>
         </li>
@@ -131,7 +127,7 @@
             <label for="third">Remove Tight Clothing or Jewelry</label>
             <div class="content">
                 <div class=image>
-                    <img src="../Assets/First Aid/3.jpg" alt="No jewellery">
+                    <img src="./Assets/First Aid/3.jpg" alt="No jewellery">
                 </div> &nbsp; &nbsp;
                 <p>Swelling can occur rapidly, so remove anything that might constrict the bitten area.
                 </p>
@@ -141,7 +137,7 @@
             <label for="fourth">Immobilize the Affected Area</label>
             <div class="content">
                 <div class=image>
-                    <img src="../Assets/First Aid/4.jpg" alt="Use a Splint">
+                    <img src="./Assets/First Aid/4.jpg" alt="Use a Splint">
                 </div> &nbsp; &nbsp;
                 <p>Use a splint or any firm material to limit movement of the bitten limb to prevent venom from
                     spreading.</p>
@@ -152,7 +148,7 @@
             </label>
             <div class="content">
                 <div class=image>
-                    <img src="../Assets/First Aid/5.jpg" alt="No Ice">
+                    <img src="./Assets/First Aid/5.jpg" alt="No Ice">
                 </div> &nbsp; &nbsp;
                 <p>These methods can do more harm than good. Instead, seek immediate medical assistance.
                 </p>
@@ -162,7 +158,7 @@
             <label for="sixth">Get Medical Help Promptly</label>
             <div class="content">
                 <div class=image>
-                    <img src="../Assets/First Aid/6.jpg" alt="Mecical Help">
+                    <img src="./Assets/First Aid/6.jpg" alt="Mecical Help">
                 </div> &nbsp; &nbsp;
                 <p>Call emergency services or head to the nearest hospital, specifying the type of snake if you can
                     safely identify it.</p>
@@ -170,7 +166,6 @@
         </div>
     </ul>
 
-    <!--Herpetologists-->
     <div class="row" style="padding-top:30px">
         <h1 class="text-start display-2 ms-5 fade-in-up">Reach Out to the Experts</h1>
         <p class="heading-paragraph ms-5 fade-in-up">Whether for emergency advice or general knowledge, these
@@ -181,7 +176,7 @@
     <div class="specialists">
         <div class="card3 fade-in-up">
             <div class="face front">
-                <img src="../Assets/Herpetologists/1.jpeg" class="img-blur">
+                <img src="./Assets/Herpetologists/1.jpeg" class="img-blur">
                 <div class="face front h3">
                     <h3 class="text-center">Dr. Nuwan Perera</h3>
                     <h2 class="text-center">Contact No:- <br>+94 71 294 5478</h2>
@@ -190,7 +185,7 @@
         </div>
         <div class="card3 fade-in-up">
             <div class="face front">
-                <img src="../Assets/Herpetologists/2.jpeg" class="img-blur">
+                <img src="./Assets/Herpetologists/2.jpeg" class="img-blur">
                 <div class="face front h3">
                     <h3 class="text-center">Dr. Ishara Silva</h3>
                     <h2 class="text-center">Contact No:- <br>+94 77 254 5168</h2>
@@ -200,7 +195,7 @@
         
         <div class="card3 fade-in-up">
             <div class="face front">
-                <img src="../Assets/Herpetologists/3.jpeg" class="img-blur">
+                <img src="./Assets/Herpetologists/3.jpeg" class="img-blur">
                 <div class="face front h3">
                     <h3 class="text-center">Mr. Malik Perera</h3>
                     <h2 class="text-center">Contact No:- <br>+94 71 275 6348</h2>
@@ -209,7 +204,7 @@
         </div>
         <div class="card3 fade-in-up">
             <div class="face front">
-                <img src="../Assets/Herpetologists/4.jpeg" class="img-blur">
+                <img src="./Assets/Herpetologists/4.jpeg" class="img-blur">
                 <div class="face front h3">
                     <h3 class="text-center">Ms. Dinithi Wijesinghe</h3>
                     <h2 class="text-center">Contact No:-<br> +94 71 276 5348</h2>
@@ -218,7 +213,7 @@
         </div>
         <div class="card3 fade-in-up">
             <div class="face front">
-                <img src="../Assets/Herpetologists/5.jpeg" class="img-blur">
+                <img src="./Assets/Herpetologists/5.jpeg" class="img-blur">
                 <div class="face front h3">
                     <h3 class="text-center">Dr.  Kusal Jayasinghe</h3>
                     <h2 class="text-center">Contact No:-<br> +94 71 458 6237</h2>
@@ -227,40 +222,11 @@
         </div>
         
         </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-        <!--Footer-->
         <footer>
             <div class="footer-container">
                 <div class="row">
                     <div class="col-sm-3">
-                        <a href="../1.Home/index.html"><img src="../Assets/logo.png" class="footer-logo">
+                        <a href="./index.html"><img src="./Assets/logo.png" class="footer-logo">
                             <h2 class="text-center" id="footer-brand-name">Serpent Whispers</h2>
                             <h6 class="text-center" id="footer-slogan">Exploring the Wonders of Snakes</h4>
                         </a>
@@ -268,10 +234,10 @@
                     <div class="col-sm-3">
                         <h3 class="text-center">Quick Links</h3>
                         <ul class="quick-links text-center">
-                            <li><a href="../index.html">Home</a></li>
-                            <li><a href="../index.html#snake-facts">Snake Facts</a></li>
-                            <li><a href="../safety.html">Safety Tips</a></li>
-                            <li><a href="../Donate.html">Donate</a></li>
+                            <li><a href="./index.html">Home</a></li>
+                            <li><a href="./index.html#snake-facts">Snake Facts</a></li>
+                            <li><a href="./safety.html">Safety Tips</a></li>
+                            <li><a href="./Donate.html">Donate</a></li>
                         </ul>
                     </div>
                     <div class="col-sm-3">
@@ -295,8 +261,7 @@
     </footer>
 
 
-    <!--Javascript-->
-    <script src="../1.Home/loader.js"></script>
+    <script src="./loader.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script>
         window.onload = function () {
