--- a/Donate.html
+++ b/Donate.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="shortcut icon" href="../Assets/favicon.png" type="image/x-icon">
+  <link rel="shortcut icon" href="./Assets/favicon.png" type="image/x-icon">
   <link rel="stylesheet" href="Donate.css">
-  <link rel="stylesheet" href="../loader.css">
+  <link rel="stylesheet" href="./loader.css">
 
   <!--Bootstrap-->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -30,7 +30,7 @@
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-  <title>Serpent Whispers</title>
+  <title>Donate | Serpent Whispers</title>
 </head>
 
 
@@ -38,30 +38,28 @@
   <div class="loader-container">
     <div class="loader"></div>
   </div>
-  <!--Navigation Bar-->
   <nav class="navbar navbar-expand-sm bg-body-dark navbar-dark fixed-top">
     <div class="container-fluid">
-      <a class="navbar-brand" href="../index.html"><img class="logo" src="../Assets/logo.png"></a>
+      <a class="navbar-brand" href="./index.html"><img class="logo" src="./Assets/logo.png"></a>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ms-auto d-flex gap-3">
           <li class="nav-item">
-            <a class="nav-link" id="home" aria-current="page" href="../index.html">Home</a>
+            <a class="nav-link" id="home" aria-current="page" href="./index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" id="snake-facts-links" href="../index.html#snake-facts">Snake Facts</a>
+            <a class="nav-link" id="snake-facts-links" href="./index.html#snake-facts">Snake Facts</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" id="safety-tips" href="../safety.html">Safety Tips</a>
+            <a class="nav-link" id="safety-tips" href="./safety.html">Safety Tips</a>
           </li>
           <li class="nav-item ">
-            <a class="nav-link" id="donate" href="../Donate.html">Donate</a>
+            <a class="nav-link" id="donate" href="./Donate.html">Donate</a>
           </li>
         </ul>
       </div>
     </div>
   </nav>
 
-  <!--Why your Donation Matters-->
   <div class="row" style="padding-top:30px" id="third-heading">
     <h1 class="text-start display-2 ms-5">Why Your Donation Matters</h1>
     <p class="heading-paragraph ms-5">By donating, you’re not just supporting snake conservation—you’re
@@ -70,7 +68,6 @@
     </p>
   </div>
 
-  <!--Points-->
   <div class="donation-container">
     <div class="donation-reasons fade-in-up">
       <div class="reasons-header">
@@ -124,7 +121,7 @@
 
   </div>
 
-  <!--Stories-->
+
   <div class="row" style="padding-top:30px" id="stories">
     <h1 class="text-start display-2 ms-5 fade-in-up">The Journey of Rescued Snakes</h1>
     <p class="heading-paragraph ms-5 fade-in-up">Join us in celebrating the resilience of these remarkable creatures and
@@ -136,21 +133,21 @@
   <div id="demo" class="carousel slide fade-in-up" data-bs-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="../Assets/Rescuing.jpg" alt="Diverse Diets" class="d-block">
+        <img src="./Assets/Rescuing.jpg" alt="Diverse Diets" class="d-block">
         <div class="carousel-caption">
           <h3 class="carousel-caption-h3">Shadow, the Resilient Cobra</h3>
           <p class="carousel-caption-p">Shadow, a young cobra, was found injured by a farmer. Our team quickly rescued him, providing medical care and hydration. After weeks of recovery, Shadow was released, becoming a symbol of coexistence between humans and snakes.</p>
         </div>
       </div>
       <div class="carousel-item">
-        <img src="../Assets/Rescuing.jpg" alt="Unique Senses" class="d-block">
+        <img src="./Assets/Rescuing.jpg" alt="Unique Senses" class="d-block">
         <div class="carousel-caption">
           <h3 class="carousel-caption-h3">Willow, the Jungle’s Little Survivor</h3>
           <p class="carousel-caption-p">Willow, a rare green pit viper, was trapped in a fishing net. Hikers alerted us, and we rescued her, treating her minor injuries. After a successful rehabilitation, Willow was released back into the wild, inspiring our educational programs on wildlife conservation.</p>
         </div>  
       </div>
       <div class="carousel-item">
-        <img src="../Assets/Rescuing.jpg" alt="Infrared Vision" class="d-block">
+        <img src="./Assets/Rescuing.jpg" alt="Infrared Vision" class="d-block">
         <div class="carousel-caption">
           <h3 class="carousel-caption-h3">Rusty, the Brave Python</h3>
           <p class="carousel-caption-p">Rusty, a reticulated python, wandered into a town in search of food. Concerned locals called for help, and we safely transported him to a reserve away from human settlements. Rusty now thrives in the wild, illustrating the importance of understanding and protecting wildlife.</p>
@@ -167,7 +164,6 @@
       </div>
 
 
-      <!--Donate-->
       <div class="row" style="padding-top:30px" id="stories">
         <h1 class="text-start display-2 ms-5 fade-in-up">Make a Difference, Donate Now</h1>
         <p class="heading-paragraph ms-5 fade-in-up"> Your generosity fuels rescue, rehabilitation, and protection efforts—help us create a safer world for snakes and preserve biodiversity.
@@ -181,21 +177,13 @@
           <button type="submit" class="btn-donate">Donate Now</button>
           <h5 class="donate-para">Just $50 can support a snake rescue mission, providing care and a safe return to the wild.</h5>
       </div>
-      
+ 
 
-
-
-
-
-
-
-
-  <!--Footer-->
   <footer>
     <div class="footer-container">
       <div class="row">
         <div class="col-sm-3">
-          <a href="../index.html"><img src="../Assets/logo.png" class="footer-logo">
+          <a href="./index.html"><img src="./Assets/logo.png" class="footer-logo">
             <h2 class="text-center" id="footer-brand-name">Serpent Whispers</h2>
             <h6 class="text-center" id="footer-slogan">Exploring the Wonders of Snakes</h4>
           </a>
@@ -203,10 +191,10 @@
         <div class="col-sm-3">
           <h3 class="text-center">Quick Links</h3>
           <ul class="quick-links text-center">
-            <li><a href="../index.html">Home</a></li>
-            <li><a href="../index.html#snake-facts">Snake Facts</a></li>
-            <li><a href="../safety.html">Safety Tips</a></li>
-            <li><a href="../Donate.html">Donate</a></li>
+            <li><a href="./index.html">Home</a></li>
+            <li><a href="./index.html#snake-facts">Snake Facts</a></li>
+            <li><a href="./safety.html">Safety Tips</a></li>
+            <li><a href="./Donate.html">Donate</a></li>
           </ul>
         </div>
         <div class="col-sm-3">
@@ -230,8 +218,8 @@
   </footer>
 
 
-  <!--Javascript-->
-  <script src="../loader.js"></script>
+
+  <script src="./loader.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script>
     window.onload = function () {
