--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="../Assets/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./Assets/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="loader.css">
 
@@ -37,37 +37,36 @@
     <div class="loader-container">
         <div class="loader"></div>
     </div>
-<!--Navigation Bar-->
+
   <nav class="navbar navbar-expand-sm bg-body-dark navbar-dark fixed-top">
       <div class="container-fluid">
-        <a class="navbar-brand" href="../index.html"><img class="logo" src="../Assets/logo.png"></a>
+        <a class="navbar-brand" href="./index.html"><img class="logo" src="./Assets/logo.png"></a>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ms-auto d-flex gap-3">
             <li class="nav-item">
-              <a class="nav-link" id="home" aria-current="page" href="../index.html">Home</a>
+              <a class="nav-link" id="home" aria-current="page" href="./index.html">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" id="snake-facts-links" href="#snake-facts">Snake Facts</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" id="safety-tips" href="../safety.html">Safety Tips</a>
+              <a class="nav-link" id="safety-tips" href="./safety.html">Safety Tips</a>
             </li>         
             <li class="nav-item ">
-              <a class="nav-link"  id="donate" href="../Donate.html">Donate</a>
+              <a class="nav-link"  id="donate" href="./Donate.html">Donate</a>
             </li>
           </ul>
         </div>
       </div>
     </nav>
-<!--Video Background-->
+
 <video autoplay loop muted class="bg-video">
-  <source src="../Assets/video.mp4" type="video/mp4">
+  <source src="./Assets/video.mp4" type="video/mp4">
 </video>
 
 <div class="header1 d-flex align-items-center justify-content-start ms-5" id="main-heading" style="height: 100vh;">
   <h1 class="text-right display-1"> <span class="Brand-name">Serpent Whispers</span><br>Discover the Fascinating World of Snakes <br>
 
-<!--Quotes Section-->
 <div class="text-container ms-1 mt-3">
   <div class="text">Those who understand the coils of the snake, understand power</div>
   <div class="text">Only the brave dare to face the fangs</div>
@@ -87,7 +86,7 @@
   <button type="button"><a href="#snake-facts" class="text-decoration-none"><span class="button-span"></span>Explore &nbsp; <i class="fa fa-arrow-down"></i></a></button>
 </div>
 
-<!-- Carousel -->
+
  <section id="snake-facts">
 <div class="row">
 <h1 class="text-start display-2 ms-5 fade-in-up">Do You Know?</h1>
@@ -96,35 +95,35 @@
 <div id="demo" class="carousel slide fade-in-up" data-bs-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="../Assets/Image Slider/1.jpg" alt="Diverse Diets" class="d-block">
+      <img src="./Assets/Image Slider/1.jpg" alt="Diverse Diets" class="d-block">
       <div class="carousel-caption">
         <h3 class="carousel-caption-h3">Diverse Diets</h3>
         <p class="carousel-caption-p">Snakes have a varied diet that can include mammals, birds, amphibians, fish, and even other snakes. Some species, like the king cobra, can consume large prey, including entire other snakes.</p>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="../Assets/Image Slider/2.jpg" alt="Unique Senses" class="d-block">
+      <img src="./Assets/Image Slider/2.jpg" alt="Unique Senses" class="d-block">
       <div class="carousel-caption">
         <h3 class="carousel-caption-h3">Unique Senses</h3>
         <p class="carousel-caption-p">Snakes have an extraordinary sense of smell, which they use to track prey. They flick their tongues to collect scent particles from the air and then bring them to a special organ called the Jacobson's organ for analysis</p>
       </div>  
     </div>
     <div class="carousel-item">
-      <img src="../Assets/Image Slider/3.jpg" alt="Infrared Vision" class="d-block">
+      <img src="./Assets/Image Slider/3.jpg" alt="Infrared Vision" class="d-block">
       <div class="carousel-caption">
         <h3 class="carousel-caption-h3">Infrared Vision</h3>
         <p class="carousel-caption-p">Some snakes, such as pit vipers, boas, and pythons, possess specialized heat-sensing pits that allow them to detect infrared radiation. This enables them to "see" the body heat of their warm-blooded prey, even in complete darkness.</p>
       </div>  
     </div>
     <div class="carousel-item">
-      <img src="../Assets/Image Slider/4.jpg" alt="Venom Variations" class="d-block">
+      <img src="./Assets/Image Slider/4.jpg" alt="Venom Variations" class="d-block">
       <div class="carousel-caption">
         <h3 class="carousel-caption-h3">Venom Variations</h3>
         <p class="carousel-caption-p">Not all snake venom is the same. Venom can serve different purposes, such as immobilizing prey or aiding in digestion. Some venoms are cytotoxic, affecting cells, while others are neurotoxic, impacting the nervous system.</p>
       </div>  
     </div>
     <div class="carousel-item">
-      <img src="../Assets/Image Slider/5.jpg" alt="Impressive Regeneration" class="d-block">
+      <img src="./Assets/Image Slider/5.jpg" alt="Impressive Regeneration" class="d-block">
       <div class="carousel-caption">
         <h3 class="carousel-caption-h3">Impressive Regeneration</h3>
         <p class="carousel-caption-p">While snakes don’t regenerate limbs like some other species, they can shed their skin regularly. This process, known as ecdysis, helps them get rid of parasites and allows for growth, making their skin look fresh and vibrant.</p>
@@ -141,17 +140,17 @@
 </div>
 </section>
 <br><br><br>
-<!--Snake Varieties-->
+
 <div class="row" style="padding-top:30px">
   <h1 class="text-start display-2 ms-5 fade-in-up">Snake Varieties</h1>
   <p class="heading-paragraph ms-5 fade-in-up">Explore the incredible diversity of snakes, from the majestic King Cobra to the vibrant Green Tree Python. Each species showcases unique traits that highlight the wonders of the reptile world.</p>
   </div>
 
-<!--Flip Cards--> 
+
 <div class="flip-cards">
 <div class="card1 fade-in-up">
   <div class="face front">
-      <img src="../Assets/Snake Species Cards/1.jpeg">
+      <img src="./Assets/Snake Species Cards/1.jpeg">
       <h3>King Cobra</h3>
   </div>
   <div class="face back">
@@ -160,7 +159,7 @@
 </div>
 <div class="card1 fade-in-up">
   <div class="face front">
-      <img src="../Assets/Snake Species Cards/2.jpeg">
+      <img src="./Assets/Snake Species Cards/2.jpeg">
       <h3>Green Tree Python</h3>
   </div>
   <div class="face back">
@@ -169,7 +168,7 @@
 </div>
 <div class="card1 fade-in-up">
   <div class="face front">
-      <img src="../Assets/Snake Species Cards/3.jpeg">
+      <img src="./Assets/Snake Species Cards/3.jpeg">
       <h3>Black Mamba</h3>
   </div>
   <div class="face back">
@@ -178,7 +177,7 @@
 </div>
 <div class="card1 fade-in-up">
   <div class="face front">
-      <img src="../Assets/Snake Species Cards/4.jpeg">
+      <img src="./Assets/Snake Species Cards/4.jpeg">
       <h3>Anaconda</h3>
   </div>
   <div class="face back">
@@ -187,7 +186,7 @@
 </div>
 <div class="card1 fade-in-up">
   <div class="face front">
-      <img src="../Assets/Snake Species Cards/5.jpeg">
+      <img src="./Assets/Snake Species Cards/5.jpeg">
       <h3>Gaboon Viper</h3>
   </div>
   <div class="face back">
@@ -196,7 +195,7 @@
 </div>
 <div class="card1 fade-in-up">
   <div class="face front">
-      <img src="../Assets/Snake Species Cards/6.jpeg">
+      <img src="./Assets/Snake Species Cards/6.jpeg">
       <h3>Boomslang</h3>
   </div>
   <div class="face back">
@@ -206,7 +205,7 @@
 </div>
 
 
-<!--Myths-->
+
 <div class="row" style="padding-top:50px">
   <h1 class="text-start display-2 ms-5 fade-in-up">Myths VS Reality</h1>
   <p class="heading-paragraph ms-5 fade-in-up">Uncover the truths behind common snake myths, such as their ability to hear and their behavior around humans. These misconceptions often overshadow the fascinating realities of these remarkable creatures.</p>
@@ -215,7 +214,7 @@
 <div class="myths-cards">
   <div class="card2 fade-in-up">
     <div class="face front">
-        <img src="../Assets/Myths Cards/1.jpeg" class="img-blur">
+        <img src="./Assets/Myths Cards/1.jpeg" class="img-blur">
         <h3>Snakes Roll Down Hills Like Hoops</h3>
         <div class="face front p">
         <p>Some believe snakes bite their tails to form a hoop and roll down hills, but this behavior is impossible</p>
@@ -224,7 +223,7 @@
   </div>
   <div class="card2 fade-in-up">
     <div class="face front">
-        <img src="../Assets/Myths Cards/2.jpeg" class="img-blur">
+        <img src="./Assets/Myths Cards/2.jpeg" class="img-blur">
         <h3>Snakes Steal Human Breath at Night</h3>
         <div class="face front p">
         <p>An old superstition claims snakes suck the breath from sleeping humans, but snakes avoid people</p>
@@ -233,7 +232,7 @@
   </div>
   <div class="card2 fade-in-up">
     <div class="face front">
-        <img src="../Assets/Myths Cards/3.jpeg" class="img-blur">
+        <img src="./Assets/Myths Cards/3.jpeg" class="img-blur">
         <h3>Snakes Form Revenge Gangs</h3>
         <div class="face front p">
         <p>There's a myth that snakes will gather in groups to seek revenge if one of them is harmed.</p>
@@ -242,7 +241,7 @@
   </div>
   <div class="card2 fade-in-up">
     <div class="face front">
-        <img src="../Assets/Myths Cards/4.jpeg" class="img-blur">
+        <img src="./Assets/Myths Cards/4.jpeg" class="img-blur">
         <h3>White Snakes Are Sacred</h3>
         <div class="face front p">
         <p>In some cultures, it's believed that white snakes are mystical and bring good fortune, but they are simply albino or leucistic snakes</p>
@@ -251,7 +250,7 @@
   </div>
   <div class="card2 fade-in-up">
     <div class="face front">
-        <img src="../Assets/Myths Cards/5.jpeg" class="img-blur">
+        <img src="./Assets/Myths Cards/5.jpeg" class="img-blur">
         <h3>Snakes Can't Hear</h3>
         <div class="face front p">
         <p>Some think snakes are deaf, but they can detect vibrations and have a keen sense of hearing through their jawbones</p>
@@ -260,7 +259,7 @@
   </div>
   <div class="card2 fade-in-up">
     <div class="face front">
-        <img src="../Assets/Myths Cards/6.jpeg" class="img-blur">
+        <img src="./Assets/Myths Cards/6.jpeg" class="img-blur">
         <h3>Snakes' Tongues Are Harmful</h3>
         <div class="face front p">
         <p>The forked tongue is thought to be harmful, but it's just a sensory tool for tasting the air</p>
@@ -269,22 +268,22 @@
   </div>
 </div>
 
-<!--Footer-->
+
 <footer>
   <div class="footer-container">
    <div class="row">
       <div class="col-sm-3" >
-          <a href="../index.html"><img src="../Assets/logo.png" class="footer-logo">
+          <a href="./index.html"><img src="./Assets/logo.png" class="footer-logo">
           <h2 class="text-center" id="footer-brand-name">Serpent Whispers</h2>
           <h6 class="text-center" id="footer-slogan">Exploring the Wonders of Snakes</h4></a>
       </div>
       <div class="col-sm-3">
           <h3 class="text-center">Quick Links</h3>
           <ul class="quick-links text-center">
-              <li><a href="../index.html">Home</a></li>
+              <li><a href="./index.html">Home</a></li>
               <li><a href="#snake-facts">Snake Facts</a></li>
-              <li><a href="../safety.html">Safety Tips</a></li>
-              <li><a href="../Donate.html">Donate</a></li>
+              <li><a href="./safety.html">Safety Tips</a></li>
+              <li><a href="./Donate.html">Donate</a></li>
           </ul>
       </div>
       <div class="col-sm-3">
